--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
   <link href="CSS/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <p>Hello World</p>
+  <header>
+  </header>
+  <div id="videolesson-container" style="display: flex; height:100vh ;justify-content: space-around; align-items: center;">
+    <video width="1000px" height="500px" controls >
+    <source src="Media/Video.mp4" type="video/mp4">
+    </video>
+</video>
+  </div>
 </body>
 
 </html>
