--- a/signup-role.html
+++ b/signup-role.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="CSS/style.css" rel="stylesheet" type="text/css" />
+  <link href="CSS/signup-role.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <header>
@@ -24,14 +25,12 @@
    </header>
 
 
-   <div id="content">
+   <div id="rol">
 
-
-      <div id="web-text">Welcome!</div>
-
-      <div id="bttns">
-        <a href="login.html"><div class="bttn" id="login">Login</div></a>
-        <a href="signup-role.html"><div class="bttn" id="sign-up">SignUp</div></a>
+      <div id="web-text">Alege-ti Rolul</div>
+      <div id="role-options">
+        <a href="signup-prof.html"><div class="rol" id="prof">Profesor</div></a>
+        <a href="signup.html"><div class="rol" id="elev">Elev</div></a>
       </div>
    </div>
 
