Login / Sign-Up Forms Design

--- a/login.html
+++ b/login.html
@@ -25,10 +25,6 @@
       <div id="menu" style="display: none;">
 
         <a href="index.html"><div>Home</div></a>
-        <a href="profile.html"><div>Profile</div></a>
-        <a href="notes.html"><div>Notes</div></a>
-        <a href="dreams.html"><div>Dreams</div></a>
-        <a href="tasks.html"><div>Tasks</div></a>
       </div>
 
    	  <div id="web-text">Login</div>
@@ -41,8 +37,7 @@
    	  	<button class="bttn" id="login">Login</button>
    	  </form>
    </div>
-   <script type="text/javascript" src="../JS Files/menu.js"></script>
-   <script type="text/javascript" src="../JS Files/app.js"></script>
+   <script type="text/javascript" src="JS/menu.js"></script>
 </body>
 
 </html>
