--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div id="menu" style="display: none;">
 
         <a href="index.html"><div>Home</div></a>
+        <a href="conferinta.html"><div>Conferinta</div></a>
       </div>
    </header>
 
