--- a/signup-prof.html
+++ b/signup-prof.html
@@ -25,6 +25,8 @@
       <div id="menu" style="display: none;">
 
         <a href="index.html"><div>Home</div></a>
+        
+        <a href="conferinta.html"><div>Conferinta</div></a>
       </div>
 
       <div id="web-text">SignUp</div>
