--- a/signup.html
+++ b/signup.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="CSS/style.css"/>
   <link rel="stylesheet" href="CSS/signup.css"/>
+  <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-firestore.js"></script>
 </head>
 
 
@@ -25,6 +28,7 @@
       <div id="menu" style="display: none;">
 
         <a href="index.html"><div>Home</div></a>
+        <a href="conferinta.html"><div>Conferinta</div></a>
       </div>
 
    	  <div id="web-text">SignUp</div>
@@ -57,6 +61,7 @@
    	  </form>
    </div>
    <script type="text/javascript" src="JS/menu.js"></script>
+   <script src="JS/signup.js"> </script>
 </body>
 
 </html>
