--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
         <input type="text" id="user" name="user" required="required"><br>
         <label for="password">Password:</label><br>
         <input type="password" id="password" name="password" required="required"><br><br>
-   	  	<button class="bttn" id="login">Login</button>
+   	  	<button class="bttn" type="button" id="login">Login</button>
    	  </form>
    </div>
    <script type="text/javascript" src="JS/menu.js"></script>
