--- a/conferinta.html
+++ b/conferinta.html
@@ -21,6 +21,7 @@
       <div id="menu" style="display: none;">
 
         <a href="index.html"><div>Home</div></a>
+        <a href="conferinta.html"><div>Conferinta</div></a>
       </div>
    </header>
    
