Am adaugat quiz-ul in meniu

--- a/login.html
+++ b/login.html
@@ -26,6 +26,7 @@
 
         <a href="index.html"><div>Home</div></a>
         <a href="conferinta.html"><div>Conferinta</div></a>
+        <a href="quiz.html"><div>Quiz</div></a>
       </div>
 
    	  <div id="web-text">Login</div>
