--- a/signup-prof.html
+++ b/signup-prof.html
@@ -27,6 +27,7 @@
         <a href="index.html"><div>Home</div></a>
         
         <a href="conferinta.html"><div>Conferinta</div></a>
+        <a href="quiz.html"><div>Quiz</div></a>
       </div>
 
       <div id="web-text">SignUp</div>
