--- a/conferinta.html
+++ b/conferinta.html
@@ -22,6 +22,7 @@
 
         <a href="index.html"><div>Home</div></a>
         <a href="conferinta.html"><div>Conferinta</div></a>
+        <a href="quiz.html"><div>Quiz</div></a>
       </div>
    </header>
    
