--- a/signup.html
+++ b/signup.html
@@ -29,6 +29,8 @@
       <div id="menu" style="display: none;">
 
         <a href="index.html"><div>Home</div></a>
+        <a href="conferinta.html"><div>Conferinta</div></a>
+        <a href="quiz.html"><div>Quiz</div></a>
       </div>
 
       <div id="web-text">SignUp</div>
