Schema orei si Firebase Registration

--- a/login.html
+++ b/login.html
@@ -27,6 +27,7 @@
         <a href="index.html"><div>Home</div></a>
         <a href="conferinta.html"><div>Conferinta</div></a>
         <a href="quiz.html"><div>Quiz</div></a>
+        <a href="schema.html"><div>Schema Orei</div></a>
       </div>
 
    	  <div id="web-text">Login</div>
@@ -40,6 +41,7 @@
    	  </form>
    </div>
    <script type="text/javascript" src="JS/menu.js"></script>
+   <script type="text/javascript" src="JS/login.js"></script>
 </body>
 
 </html>
