--- a/signup.html
+++ b/signup.html
@@ -31,6 +31,7 @@
         <a href="index.html"><div>Home</div></a>
         <a href="conferinta.html"><div>Conferinta</div></a>
         <a href="quiz.html"><div>Quiz</div></a>
+        <a href="schema.html"><div>Schema Orei</div></a>
       </div>
 
       <div id="web-text">SignUp</div>
