--- a/quiz.html
+++ b/quiz.html
@@ -23,6 +23,7 @@
         <a href="index.html"><div>Home</div></a>
         <a href="conferinta.html"><div>Conferinta</div></a>
         <a href="quiz.html"><div>Quiz</div></a>
+        <a href="schema.html"><div>Schema Orei</div></a>
       </div>
    </header>
    
