--- a/signup-prof.html
+++ b/signup-prof.html
@@ -28,9 +28,10 @@
         
         <a href="conferinta.html"><div>Conferinta</div></a>
         <a href="quiz.html"><div>Quiz</div></a>
+        <a href="schema.html"><div>Schema Orei</div></a>
       </div>
 
-      <div id="web-text">SignUp</div>
+      <div id="web-text">Sign Up</div>
 
       <form>
 
@@ -61,10 +62,11 @@
         <input type="password" id="rpassword" name="rpassword" required="required"><br><br>
       </div>
       </div>
-        <button class="bttn" id="login">SignUp</button>
+        <button class="bttn" type="button" id="login">SignUp</button>
       </form>
    </div>
    <script type="text/javascript" src="JS/menu.js"></script>
+   <script type="text/javascript" src="JS/signup-prof.js"></script>
 </body>
 
 </html>
