Prima incercare de a da embed la zoom

--- a/conferinta.html
+++ b/conferinta.html
@@ -36,9 +36,12 @@
    
 
    <div id="content" style='height: 80vh; display: flex; align-items: center; justify-content: center; flex-direction: column;'>
-    <div id="conferinta" style="display: flex; justify-content: center;">
-      <img src="https://images.pexels.com/photos/3184658/pexels-photo-3184658.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" style="width:600px;"/>
-    </div>
+    <iframe src="https://zoom.us/j/79884299738" height="650"
+    width="100%" sandbox="allow-forms allow-scripts allow-same-origin">
+  <p>Your browser does not support iframes.</p>
+</iframe>
+
+
 
     <button type="button" onclick="moveBalloons()">Baloane</button>
    </div>
