Teacher says minigame

--- a/conferinta.html
+++ b/conferinta.html
@@ -24,6 +24,7 @@
         <a href="conferinta.html"><div>Conferinta</div></a>
         <a href="quiz.html"><div>Quiz</div></a>
         <a href="schema.html"><div>Schema Orei</div></a>
+        <a href="words.html"><div>Alege Cuvintele</div></a>
       </div>
    </header>
    
@@ -36,10 +37,7 @@
    
 
    <div id="content" style='height: 80vh; display: flex; align-items: center; justify-content: center; flex-direction: column;'>
-    <iframe src="https://zoom.us/j/79884299738" height="650"
-    width="100%" sandbox="allow-forms allow-scripts allow-same-origin">
-  <p>Your browser does not support iframes.</p>
-</iframe>
+    <iframe style="border:none; height: 500px; width: 70%;" src="https://zoom.us/wc/79884299738/join?prefer=0&un=TWluZGF1Z2Fz" sandbox="allow-forms allow-scripts allow-same-origin" allow="microphone; camera"></iframe>
 
 
 
