--- a/signup-role.html
+++ b/signup-role.html
@@ -24,6 +24,7 @@
         <a href="conferinta.html"><div>Conferinta</div></a>
         <a href="quiz.html"><div>Quiz</div></a>
         <a href="schema.html"><div>Schema Orei</div></a>
+        <a href="words.html"><div>Alege Cuvintele</div></a>
       </div>
    </header>
 
