--- a/signup-prof.html
+++ b/signup-prof.html
@@ -29,6 +29,7 @@
         <a href="conferinta.html"><div>Conferinta</div></a>
         <a href="quiz.html"><div>Quiz</div></a>
         <a href="schema.html"><div>Schema Orei</div></a>
+        <a href="words.html"><div>Alege Cuvintele</div></a>
       </div>
 
       <div id="web-text">Sign Up</div>
