--- a/signup.html
+++ b/signup.html
@@ -32,6 +32,7 @@
         <a href="conferinta.html"><div>Conferinta</div></a>
         <a href="quiz.html"><div>Quiz</div></a>
         <a href="schema.html"><div>Schema Orei</div></a>
+        <a href="words.html"><div>Alege Cuvintele</div></a>
       </div>
 
       <div id="web-text">SignUp</div>
