--- a/words.html
+++ b/words.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="CSS/style.css" rel="stylesheet" type="text/css" />
-  <link href="CSS/schema.css" rel="stylesheet" type="text/css" />
+  <link href="CSS/words.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <header>
@@ -25,42 +25,28 @@
         <a href="quiz.html"><div>Quiz</div></a>
         <a href="schema.html"><div>Schema Orei</div></a>
         <a href="words.html"><div>Alege Cuvintele</div></a>
+        
       </div>
    </header>
+  
 
-   <div id ="container">
    <div id="content">
-
-
-      <div id="web-text">Stabileste Schema Orei!</div>
-
-      <div id="variante">
-        <div class="var">a. Inceput</div>
-
-      </div>
-
-      <div id="raspunsuri">
-        <div class="op">
-        <label class="num">1</label>
-        <input type="text" class="rasp" required="required"><br>
-        </div>
-      </div></div>
-    
-    <div id="bttn-cont">
-    <button type="button" onclick ="scor()">Trimite</button>
-    </div></div>
-
-    <div id="result" style="display: none">
-      <div id="res-txt">Felicitari</div>
-      <div id="points">67 puncte</div>
-      <a href="index.html"><button type="button">GO HOME </button></a>
-    </div>
-
+    <div id="web-text">Teacher says:</div>
+    <div id="game-desc">Alege cuvintele cheie care au legatura cu cursul la care ai participat. Pentru fiecare cuvant corect vei primi <b>1 punct!</b> Atentie insa! Daca gresesti vei pierde <b>2 puncte</b>! Dar sigur te vei descurca intrucat ai fost atent la ora! </div>
+    <div id="cuvant">Teacher Says</div>
+    <button type="button" onclick="startGame()">Incepe Jocul</button>
+    <div id="value-bttns" style="display: none">
+    <div class="true" onclick="scoreFunc(1)"><i class="fa fa-thumbs-up" aria-hidden="true"></i>
+</div>
+    <div class="false" onclick="scoreFunc(0)"><i class="fa fa-thumbs-down" aria-hidden="true"></i>
+</div>
   </div>
+   </div>
 
 
 <script type="text/javascript" src="JS/menu.js"></script>
-<script type="text/javascript" src="JS/schema.js"></script>
+<script type="text/javascript" src="JS/words.js"></script>
+
 
 </body>
 
