--- a/login.html
+++ b/login.html
@@ -29,6 +29,7 @@
         <a href="quiz.html"><div>Quiz</div></a>
         <a href="schema.html"><div>Schema Orei</div></a>
         <a href="words.html"><div>Alege Cuvintele</div></a>
+        <a href="schoollottery.html"><div>SchoolLottery</div></a>
       </div>
 
    	  <div id="web-text">Login</div>
