--- a/schema.html
+++ b/schema.html
@@ -25,6 +25,7 @@
         <a href="quiz.html"><div>Quiz</div></a>
         <a href="schema.html"><div>Schema Orei</div></a>
         <a href="words.html"><div>Alege Cuvintele</div></a>
+        <a href="schoollottery.html"><div>SchoolLottery</div></a>
       </div>
    </header>
 
