--- a/signup.html
+++ b/signup.html
@@ -33,6 +33,7 @@
         <a href="quiz.html"><div>Quiz</div></a>
         <a href="schema.html"><div>Schema Orei</div></a>
         <a href="words.html"><div>Alege Cuvintele</div></a>
+        <a href="schoollottery.html"><div>SchoolLottery</div></a>
       </div>
 
       <div id="web-text">SignUp</div>
