--- a/login.html
+++ b/login.html
@@ -2,21 +2,27 @@
 <html>
 
 <head>
-  <title>WebApp</title>
+  <title>Online Courses</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Permanent+Marker&family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="CSS/style.css"/>
   <link rel="stylesheet" href="CSS/login.css"/>
+<script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase.js"></script>
 </head>
 
 
 <body>
    <header>
-   	 <div id="logo-container">
+     <div id="logo-container">
       <a id="logo" href="index.html">Online Courses</a>
     </div>
 
-   	  <a href="javascript:void(0);" class="icon" onclick="menu()"><i class="fa fa-bars" aria-hidden="true" id="menu-icon"></i></a>
+      <a href="javascript:void(0);" class="icon" onclick="menu()"><i class="fa fa-bars" aria-hidden="true" id="menu-icon"></i></a>
    </header>
 
 
@@ -32,15 +38,15 @@
         <a href="schoollottery.html"><div>SchoolLottery</div></a>
       </div>
 
-   	  <div id="web-text">Login</div>
+      <div id="web-text">Login</div>
 
-   	  <form>
-        <label for="user">Email or Username:</label><br>
-        <input type="text" id="user" name="user" required="required"><br>
+      <form>
+        <label for="user">Email:</label><br>
+        <input type="text" id="user" name="user"><br>
         <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password" required="required"><br><br>
-   	  	<button class="bttn" type="button" id="login">Login</button>
-   	  </form>
+        <input type="password" id="password" name="password"><br><br>
+        <button type="button" class="bttn" id="login">Login</button>
+      </form>
    </div>
    <script type="text/javascript" src="JS/menu.js"></script>
    <script type="text/javascript" src="JS/login.js"></script>
