--- a/signup-prof.html
+++ b/signup-prof.html
@@ -2,7 +2,11 @@
 <html>
 
 <head>
-  <title>WebApp</title>
+  <title>Online Courses</title>
+  
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Permanent+Marker&family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="CSS/style.css"/>
