--- a/signup-prof.html
+++ b/signup-prof.html
@@ -27,6 +27,16 @@
     </div>
 
       <a href="javascript:void(0);" class="icon" onclick="menu()"><i class="fa fa-bars" aria-hidden="true" id="menu-icon"></i></a>
+      <div id="menu" style="display: none;">
+
+        <a href="index.html"><div>Home</div></a>
+        <a href="conferinta.html"><div>Conferinta</div></a>
+        <a href="quiz.html"><div>Quiz</div></a>
+        <a href="schema.html"><div>Schema Orei</div></a>
+        <a href="words.html"><div>Alege Cuvintele</div></a>
+        <a href="schoollottery.html"><div>SchoolLottery</div></a>
+        <a href="cadou.html"><div>Cadou</div></a>
+      </div>
    </header>
 
 
