--- a/signup.html
+++ b/signup.html
@@ -38,6 +38,7 @@
         <a href="schema.html"><div>Schema Orei</div></a>
         <a href="words.html"><div>Alege Cuvintele</div></a>
         <a href="schoollottery.html"><div>SchoolLottery</div></a>
+        <a href="cadou.html"><div>Cadou</div></a>
       </div>
 
       <div id="web-text">SignUp</div>
