--- a/signup-role.html
+++ b/signup-role.html
@@ -28,6 +28,7 @@
         <a href="schema.html"><div>Schema Orei</div></a>
         <a href="words.html"><div>Alege Cuvintele</div></a>
         <a href="schoollottery.html"><div>SchoolLottery</div></a>
+        <a href="cadou.html"><div>Cadou</div></a>
       </div>
    </header>
 
